# Doc2LLM

./: .gitignore  Agents.md  DESIGN.md  PRODUCT.md  admin-dashboard-mvp-scope-updated.md  handover.md  implementation_plan.md  implementation_plan_30.md
.impeccable/critique/: 2026-05-28T14-54-53Z__frontend-app-app-dashboard-page-tsx.md
backend/api/: .env.example  README.md  pyproject.toml  railway.json  requirements.txt  start.py
backend/api/app/: __init__.py  auth.py  cleanup.py  conversion_service.py  dependencies.py  errors.py  limiter.py  main.py  models.py  ocr_service.py  repository.py  services.py  storage.py  validators.py
backend/api/scripts/: generate_test_report.py
backend/api/supabase/migrations/: 001_doc2llm_schema_and_grants.sql  002_feature_usage.sql
backend/api/test-reports/: backend-junit.xml  backend-summary.md  live-deployment-junit.xml
backend/api/tests/: test_admin.py  test_auth_error_handling.py  test_cleanup.py  test_conversion_dependencies.py  test_conversion_service.py  test_conversions_api.py  test_cors.py  test_google_oauth_flow.py  test_health.py  test_limiter.py  test_live_auth_flow.py  test_live_deployment.py  test_ocr_service.py  test_settings.py  test_signup_redirect.py  test_startup.py  test_validators.py
docs/: api_reference.md  data_models.md  environment_config.md  file_to_markdown_architecture.md  file_to_markdown_converter_prd_v2.md  sprints.md  storage_and_security.md
frontend/: .env.example  button.html  middleware.ts  package-lock.json  package.json  toggle.html
frontend/app/: globals.css  layout.tsx
(+32 files in other folders)
